# python_labs

./: .coverage  README.md  novichki.json  pyproject.toml  setup.py  test_group.csv  test_valery.csv
data/output_stuff/: chingada.json  citiesinflames.xlsx  pupa.xlsx  studs_new.csv  studs_neww.xlsx
data/samples/: chek.txt
data/samples/output_stuff/: studs_new.csv
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_schet_stud.py  readme.md
src/lab02/: readme.md  unique_sorted.py
src/lab02/arrays/: flattern.py  min_max.py
src/lab02/format_record/: format_record.py
src/lab02/matrix/: col_sum.py  row_sum.py  transpose.py
src/lab03/: readme.md  stdin.py  umbapumpa.py
src/lab03/text_py/: count_freq+top_n.py  normalize.py  tokenize.py
src/lab04/: io_txt_csv.py  readme.md  report.csv  text_report.py  umbapumpa.py
src/lab05/: README.md  csv_xlsx.py  data.json  json_csv.py  ltabla.xlsx  pupa.csv  tester.py
src/lab06/: cli_covert.py  cli_text.py  readme.md
src/lab07/: readme.md
src/lab08/: Studs_input.json  readme.md  serialize.py  test.py
src/lab09/: group.py  models.py  readme.md
src/lab10/: linked_list.py  readme.md  structures.py
src/lib/: col_sum.py  count_freq+top_n.py  flat.py  for_rec.py  min_max.py  normalizef.py  row_sum.py  tokenize.py  transpose.py  uni_sort.py
tests/: test_json2csv.py  test_testo.py
